# langgraph-email-processing

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
config/: settings.py
data/blobs/: sample_email_body.txt
sql/: init.sql
src/email_processor/: blob_store.py  consumer.py  dead_letter_replay.py  main.py  models.py  pg_store.py  producer.py  service.py
src/email_processor/agent/: graph.py  nodes.py  state.py
tests/: conftest.py
tests/fixtures/: sample_email_body.txt
tests/integration/: conftest.py  test_consumer_producer.py  test_dead_letter_replay.py  test_llm.py  test_pg_store.py  test_pipeline.py
tests/unit/: test_blob_store.py  test_consumer.py  test_dead_letter_replay.py  test_graph.py  test_models.py  test_nodes.py  test_producer.py  test_service.py
